tests/snapshots/parser_tests__tabular_arrays__tabular_comma.snap
---
source: tests/parser_tests.rs
expression: ast
---
Document {
    children: [
        Object {
            entries: [
                ObjectEntry {
                    key: "users",
                    key_span: Span {
                        start: Position {
                            line: 0,
                            column: 0,
                            offset: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 5,
                            offset: 5,
                        },
                    },
                    value: Array {
                        items: [
                            Object {
                                entries: [
                                    ObjectEntry {
                                        key: "id",
                                        key_span: Span {
                                            start: Position {
                                                line: 1,
                                                column: 2,
                                                offset: 21,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 3,
                                                offset: 22,
                                            },
                                        },
                                        value: Number {
                                            value: PosInt(
                                                1,
                                            ),
                                            span: Span {
                                                start: Position {
                                                    line: 1,
                                                    column: 2,
                                                    offset: 21,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 3,
                                                    offset: 22,
                                                },
                                            },
                                        },
                                    },
                                    ObjectEntry {
                                        key: "name",
                                        key_span: Span {
                                            start: Position {
                                                line: 1,
                                                column: 2,
                                                offset: 21,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 3,
                                                offset: 22,
                                            },
                                        },
                                        value: String {
                                            value: "Alice",
                                            span: Span {
                                                start: Position {
                                                    line: 1,
                                                    column: 4,
                                                    offset: 23,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 9,
                                                    offset: 28,
                                                },
                                            },
                                        },
                                    },
                                ],
                                span: Span {
                                    start: Position {
                                        line: 1,
                                        column: 2,
                                        offset: 21,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 9,
                                        offset: 28,
                                    },
                                },
                            },
                            Object {
                                entries: [
                                    ObjectEntry {
                                        key: "id",
                                        key_span: Span {
                                            start: Position {
                                                line: 2,
                                                column: 2,
                                                offset: 31,
                                            },
                                            end: Position {
                                                line: 2,
                                                column: 3,
                                                offset: 32,
                                            },
                                        },
                                        value: Number {
                                            value: PosInt(
                                                2,
                                            ),
                                            span: Span {
                                                start: Position {
                                                    line: 2,
                                                    column: 2,
                                                    offset: 31,
                                                },
                                                end: Position {
                                                    line: 2,
                                                    column: 3,
                                                    offset: 32,
                                                },
                                            },
                                        },
                                    },
                                    ObjectEntry {
                                        key: "name",
                                        key_span: Span {
                                            start: Position {
                                                line: 2,
                                                column: 2,
                                                offset: 31,
                                            },
                                            end: Position {
                                                line: 2,
                                                column: 3,
                                                offset: 32,
                                            },
                                        },
                                        value: String {
                                            value: "Bob",
                                            span: Span {
                                                start: Position {
                                                    line: 2,
                                                    column: 4,
                                                    offset: 33,
                                                },
                                                end: Position {
                                                    line: 2,
                                                    column: 7,
                                                    offset: 36,
                                                },
                                            },
                                        },
                                    },
                                ],
                                span: Span {
                                    start: Position {
                                        line: 2,
                                        column: 2,
                                        offset: 31,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 7,
                                        offset: 36,
                                    },
                                },
                            },
                        ],
                        form: Tabular,
                        span: Span {
                            start: Position {
                                line: 0,
                                column: 0,
                                offset: 0,
                            },
                            end: Position {
                                line: 2,
                                column: 7,
                                offset: 36,
                            },
                        },
                    },
                },
            ],
            span: Span {
                start: Position {
                    line: 0,
                    column: 0,
                    offset: 0,
                },
                end: Position {
                    line: 2,
                    column: 7,
                    offset: 36,
                },
            },
        },
    ],
    span: Span {
        start: Position {
            line: 0,
            column: 0,
            offset: 0,
        },
        end: Position {
            line: 2,
            column: 7,
            offset: 36,
        },
    },
}
