tests/snapshots/parser_tests__tabular_arrays__tabular_tab.snap
---
source: tests/parser_tests.rs
expression: ast
---
Document {
    children: [
        Object {
            entries: [
                ObjectEntry {
                    key: "users",
                    key_span: Span {
                        start: Position {
                            line: 0,
                            column: 0,
                            offset: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 5,
                            offset: 5,
                        },
                    },
                    value: Array {
                        items: [
                            Object {
                                entries: [
                                    ObjectEntry {
                                        key: "id",
                                        key_span: Span {
                                            start: Position {
                                                line: 1,
                                                column: 2,
                                                offset: 22,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 3,
                                                offset: 23,
                                            },
                                        },
                                        value: Number {
                                            value: PosInt(
                                                1,
                                            ),
                                            span: Span {
                                                start: Position {
                                                    line: 1,
                                                    column: 2,
                                                    offset: 22,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 3,
                                                    offset: 23,
                                                },
                                            },
                                        },
                                    },
                                    ObjectEntry {
                                        key: "name",
                                        key_span: Span {
                                            start: Position {
                                                line: 1,
                                                column: 2,
                                                offset: 22,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 3,
                                                offset: 23,
                                            },
                                        },
                                        value: String {
                                            value: "Alice",
                                            span: Span {
                                                start: Position {
                                                    line: 1,
                                                    column: 4,
                                                    offset: 24,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 9,
                                                    offset: 29,
                                                },
                                            },
                                        },
                                    },
                                ],
                                span: Span {
                                    start: Position {
                                        line: 1,
                                        column: 2,
                                        offset: 22,
                                    },
                                    end: Position {
                                        line: 1,
                                        column: 9,
                                        offset: 29,
                                    },
                                },
                            },
                            Object {
                                entries: [
                                    ObjectEntry {
                                        key: "id",
                                        key_span: Span {
                                            start: Position {
                                                line: 2,
                                                column: 2,
                                                offset: 32,
                                            },
                                            end: Position {
                                                line: 2,
                                                column: 3,
                                                offset: 33,
                                            },
                                        },
                                        value: Number {
                                            value: PosInt(
                                                2,
                                            ),
                                            span: Span {
                                                start: Position {
                                                    line: 2,
                                                    column: 2,
                                                    offset: 32,
                                                },
                                                end: Position {
                                                    line: 2,
                                                    column: 3,
                                                    offset: 33,
                                                },
                                            },
                                        },
                                    },
                                    ObjectEntry {
                                        key: "name",
                                        key_span: Span {
                                            start: Position {
                                                line: 2,
                                                column: 2,
                                                offset: 32,
                                            },
                                            end: Position {
                                                line: 2,
                                                column: 3,
                                                offset: 33,
                                            },
                                        },
                                        value: String {
                                            value: "Bob",
                                            span: Span {
                                                start: Position {
                                                    line: 2,
                                                    column: 4,
                                                    offset: 34,
                                                },
                                                end: Position {
                                                    line: 2,
                                                    column: 7,
                                                    offset: 37,
                                                },
                                            },
                                        },
                                    },
                                ],
                                span: Span {
                                    start: Position {
                                        line: 2,
                                        column: 2,
                                        offset: 32,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 7,
                                        offset: 37,
                                    },
                                },
                            },
                        ],
                        form: Tabular,
                        span: Span {
                            start: Position {
                                line: 0,
                                column: 0,
                                offset: 0,
                            },
                            end: Position {
                                line: 2,
                                column: 7,
                                offset: 37,
                            },
                        },
                    },
                },
            ],
            span: Span {
                start: Position {
                    line: 0,
                    column: 0,
                    offset: 0,
                },
                end: Position {
                    line: 2,
                    column: 7,
                    offset: 37,
                },
            },
        },
    ],
    span: Span {
        start: Position {
            line: 0,
            column: 0,
            offset: 0,
        },
        end: Position {
            line: 2,
            column: 7,
            offset: 37,
        },
    },
}
